2010-01-08  Pawel Salek

	* libbalsa/imap/imap_compress.c: improve error handling.
	* libbalsa/mailbox_imap.c: catch error conditions early.

2010-01-05  Pawel Salek

	* libbalsa/imap/siobuf.[ch]: change encode interface so that
	compression callback do not need to allocate too much memory.
	* libbalsa/imap/imap_compress.c: modify the callbacks accordingly.
	* libbalsa/imap/imap-handle.c: make sure we do not leave some
	unflushed compressed data around.
	* configure.in: zlib.h is unconditionally required.

2010-01-05  Peter Bloomfield

	* libbalsa/html.c (libbalsa_html_new): remove dead code.

2010-01-05  Peter Bloomfield

	* src/balsa-message.c (add_part), (select_part): remove dead or
	redundant code.

2010-01-05  Peter Bloomfield

	* libbalsa/html.c (libbalsa_html_new): put webkit in
	document-viewer mode instead of the default browser mode.

2010-01-05  Peter Bloomfield

	* src/balsa-app.h: omit point size from default font names.
	* src/pref-manager.c (open_preferences_manager),
	(check_font_button), (apply_prefs), (font_button_check_font_size),
	(attach_font_button), (preview_font_group), (font_modified_cb),
	(default_font_size_cb): add option to use default font sizes.

2010-01-05  Peter Bloomfield

	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(quote_tag): define constants for margins.

2010-01-04  Peter Bloomfield

	* libbalsa/misc.c (libbalsa_create_entry): use
	gtk_entry_set_text instead of gtk_editable_insert_text, to avoid
	a bogus warning.

2010-01-04  Peter Bloomfield

	* src/save-restore.c (config_global_load): default to no message
	wrap and prefer text/plain over text/html.

2010-01-04  Peter Bloomfield

	* src/balsa-message.c (bm_find_entry_changed_cb), (bm_find_again),
	(balsa_message_find_in_message): build --without-gtkhtml
	--without-webkit.

2010-01-04  Peter Bloomfield

	* libbalsa/imap/imap_compress.c: add missing includes of
	stdlib.h, string.h.

2010-01-03  Peter Bloomfield
